syntax="proto3";

service KeyRouter{
    rpc KeyLookUp(KeyRouterReq) returns (RouterResponse) {}
}

message KeyRouterReq {
    string key = 1;
}

message RouterResponse {
    string ip = 1;
    RouterError error = 2;
}

enum RouterError {
    SUCCESS = 0;
    FAILURE = 1;
}

