syntax="proto3";

import "google/protobuf/empty.proto";

service Router{
    rpc FetchNew(google.protobuf.Empty) returns (RouterResponse) {}
    rpc LookUp(RouterReq) returns (RouterResponse) {}
    rpc MultipleLookUp(RouterReqMulti) returns (MultiRouterResponse) {}
}

message RouterReqMulti {
    repeated string req = 1;
}

message RouterReq {
    string req = 1;
}

message MultiRouterResponse {
    map<string, MultiResponse> ipMap = 1;
}

message MultiResponse {
    repeated string resp = 1;
}

message RouterResponse {
    string ip = 1;
}

