syntax="proto3";

service TxnRouter{
    rpc TxnLookUp(TxnRouterReq) returns (RouterResponse) {}
}

message TxnRouterReq {
    string tid = 1;
}

message RouterResponse {
    string ip = 1;
    RouterError error = 2;
}

enum RouterError {
    SUCCESS = 0;
    FAILURE = 1;
}

